color and font examples

--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -4,9 +4,12 @@
         <meta charset="utf-8">
         <title>Flatirons Recovery</title>
 
+        <link rel="stylesheet" href="/assets/flexboxgrid.min.css">
         <link rel="stylesheet" href="/index.css">
     </head>
     <body>
-        <!-- { "layout": "*" } -->
+        <main>
+            <!-- { "layout": "*" } -->
+        </main>
     </body>
 </html>
