--- a/src/index.v.html
+++ b/src/index.v.html
@@ -1,3 +1,72 @@
-<div>
-    <h1>Coming soon!</h1>
+<div class="row header">
+    <div class="yellow">
+    </div>
+    <div class="green">
+    </div>
+    <div class="blue">
+    </div>
+</div>
+
+<div class="row center-xs">
+    <div class="col-xs-8">
+        <img src="/assets/images/flatirons.jpg" alt="">
+    </div>
+</div>
+
+<div class="wrap">
+    <div class="row">
+        <div class="col-xs">
+            <h1>Flatirons Recovery Center</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col-xs">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
+</div>
+
+<div class="blue">
+    <div class="wrap">
+        <div class="row center-xs">
+            <h1>Example</h1>
+        </div>
+        <div class="row center-xs">
+            <div class="col-xs">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+                <a class="button border" href="#">Learn More</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="yellow">
+    <div class="wrap">
+        <div class="row center-xs">
+            <h1>Example</h1>
+        </div>
+        <div class="row center-xs">
+            <div class="col-xs">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+                <a class="button border" href="#">Learn More</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="wrap">
+    <div class="row center-xs">
+        <h1>Example</h1>
+    </div>
+    <div class="row center-xs">
+        <div class="col-xs">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+            <a class="button border" href="#">Learn More</a>
+        </div>
+    </div>
 </div>
