added alternate color options

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -1,9 +1,15 @@
 <div class="row header">
     <div class="yellow">
+        <!-- <div class="white-f">white text</div> -->
+        <!-- <div class="black-f">black text</div> -->
     </div>
     <div class="green">
+        <!-- <div class="white-f">white text</div> -->
+        <!-- <div class="black-f">black text</div> -->
     </div>
     <div class="blue">
+        <!-- <div class="white-f">white text</div> -->
+        <!-- <div class="black-f">black text</div> -->
     </div>
 </div>
 
