--- a/src/index.v.html
+++ b/src/index.v.html
@@ -1,7 +1,9 @@
 <div class="row header">
-    <div class="yellow"></div>
-    <div class="green"></div>
+    <div class="brown"></div>
     <div class="blue"></div>
+    <div class="yellow"></div>
+    <div class="orange"></div>
+    <div class="green"></div>
 </div>
 
 <div class="row center-xs">
@@ -11,9 +13,11 @@
 </div>
 
 <div class="row header">
-    <div class="yellow"></div>
-    <div class="green"></div>
+    <div class="brown"></div>
     <div class="blue"></div>
+    <div class="yellow"></div>
+    <div class="orange"></div>
+    <div class="green"></div>
 </div>
 
 <div class="wrap">
