--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -8,6 +8,15 @@
         <link rel="stylesheet" href="/index.css">
     </head>
     <body>
+        <header>
+            <ul>
+                <a href="/">Home</a>
+                <a href="/about">About</a>
+                <a href="/admissions">Admissions</a>
+                <a href="/therapy">Therapy</a>
+                <a href="/contact">Contact</a>
+            </ul>
+        </header>
         <main>
             <!-- { "layout": "*" } -->
         </main>
