--- a/src/index.v.html
+++ b/src/index.v.html
@@ -1,37 +1,46 @@
-<div class="row header">
-    <div class="brown"></div>
-    <div class="blue"></div>
-    <div class="yellow"></div>
-    <div class="orange"></div>
-    <div class="green"></div>
-</div>
 
-<div class="row center-xs">
-    <div class="col-xs-12 cover">
-        <img src="/assets/images/flatirons.jpg" alt="">
+<div class="cover">
+    <div class="gradient">
+        <h1>Flatirons Recovery Center</h1>
+        <div class="row">
+            <div class="col-xs">
+            </div>
+        </div>
+
     </div>
-</div>
-
-<div class="row header">
-    <div class="brown"></div>
-    <div class="blue"></div>
-    <div class="yellow"></div>
-    <div class="orange"></div>
-    <div class="green"></div>
 </div>
 
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
-            <h1>Flatirons Recovery Center</h1>
+            <h1>Our Mission</h1>
         </div>
     </div>
     <div class="row">
-        <div class="col-xs">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="col-xs-12 col-md-6">
+            <p>
+                The mission of Flatirons Recovery Center is to provide client-centered, evidence-based
+                substance use/dual-diagnosis care that takes a holistic approach to treatment. What
+                differentiates Flatirons Recovery Center from other treatment providers is our commitment to
+                small group sizes, treating clients as whole beings, and the continued development of a
+                compassionate community in which to heal. Our highly skilled, kind, and compassionate clinical
+                staff provide outstanding care that meets clients as they are, in order to guide them through
+                the process of healing from a wide range of substance use, and mental health disorders.
+            </p>
+
         </div>
-        <div class="col-xs">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="col-xs-12 col-md-6">
+            <p>
+                Flatirons Recovery Center provides clients the opportunity to begin their healing process from
+                substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober
+                living residence for clients to live in a supportive, structured, healthy environment while taking
+                part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their
+                time with Flatirons Recovery Center, clients can expect to be introduced to new many new skills
+                to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery
+                Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention
+                Skills, and introduction to community based recovery programs such as SMART Recovery and
+                12 Step/AA.
+            </p>
         </div>
     </div>
 </div>
@@ -50,6 +59,7 @@
         </div>
     </div>
 </div>
+
 <div class="yellow">
     <div class="wrap">
         <div class="row center-xs">
