--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="/assets/flexboxgrid.min.css">
     <link rel="stylesheet" href="/index.css">
+
+    <script src="/index.js" defer></script>
 </head>
 <body>
 
