--- a/src/index.v.html
+++ b/src/index.v.html
@@ -1,24 +1,25 @@
 
 <div class="cover">
     <div class="gradient">
-        <h1>Flatirons Recovery Center</h1>
-        <div class="row">
-            <div class="col-xs">
+        <div class="row center-xs">
+            <div class="col-xs-12">
+                <h1>Flatirons Recovery</h1>
+            </div>
+            <div class="col-xs-12">
+                <a class="button blue" href="#">Call Us</a>
+                <a class="button blue" href="#">About Us</a>
             </div>
         </div>
-
     </div>
 </div>
 
 <div class="wrap">
-    <div class="row">
-        <div class="col-xs">
-            <h1>Our Mission</h1>
+    <div class="row center-xs">
+        <div class="col-xs-12">
+            <h2>Our Mission</h2>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-6">
-            <p>
+        <div class="col-xs-12">
+            <p style="font-family: sans-serif;">
                 The mission of Flatirons Recovery Center is to provide client-centered, evidence-based
                 substance use/dual-diagnosis care that takes a holistic approach to treatment. What
                 differentiates Flatirons Recovery Center from other treatment providers is our commitment to
@@ -29,7 +30,7 @@
             </p>
 
         </div>
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12">
             <p>
                 Flatirons Recovery Center provides clients the opportunity to begin their healing process from
                 substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober
@@ -48,7 +49,7 @@
 <div class="blue">
     <div class="wrap">
         <div class="row center-xs">
-            <h1>Example</h1>
+            <h2>Example</h2>
         </div>
         <div class="row center-xs">
             <div class="col-xs">
@@ -60,10 +61,10 @@
     </div>
 </div>
 
-<div class="yellow">
+<div class="green">
     <div class="wrap">
         <div class="row center-xs">
-            <h1>Example</h1>
+            <h2>Example</h2>
         </div>
         <div class="row center-xs">
             <div class="col-xs">
@@ -77,7 +78,7 @@
 
 <div class="wrap">
     <div class="row center-xs">
-        <h1>Example</h1>
+        <h2>Example</h2>
     </div>
     <div class="row center-xs">
         <div class="col-xs">
