nav color per page

--- a/src/admissions/index.v.html
+++ b/src/admissions/index.v.html
@@ -1,3 +1,9 @@
+<style>
+    .nav-bar, .nav-bar > ul, .nav-icon > div, .nav-list-main, .nav-list-sub {
+        background: rgb(var(--green));
+    }
+</style>
+
 <div class="main green">
     <div class="wrap">
         <div class="row center-xs">
