--- a/src/mental-health/index.v.html
+++ b/src/mental-health/index.v.html
@@ -1,3 +1,9 @@
+<style>
+    .nav-bar, .nav-bar > ul, .nav-icon > div, .nav-list-main, .nav-list-sub {
+        background: rgb(var(--yellow));
+    }
+</style>
+
 <div class="main yellow">
     <div class="wrap">
         <div class="row center-xs">
@@ -9,93 +15,46 @@
     </div>
 </div>
 
+<div class="wrap">
+    <h2>Dual-Diagnosis Treatment</h2>
+    <h3>General Overview</h3>
+    <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder. These are also referred to as co-occurring disorders.</p>
+    <p>According to the National Alliance on Mental Illness (NAMI), approximately  19.3% of U.S. adults with mental illness also experienced a substance use disorder in 2018, equating to 9.2 million individuals.</p>
+    <p>Often when people are using substances, the symptoms that they exhibit mimic those of mental health disorders. For example, a person using cocaine or methamphetamine excessively may begin to hallucinate, or to behave in ways that are very similar to someone experiencing a manic episode (not sleeping, grandiose or impulsive behavior).</p>
+    <p>For this reason, it is important for anyone engaging in treatment at Flatirons Recovery Center to achieve a period sobriety, in order to more accurately determine and assess the nature of any mental health symptoms they may be experiencing.</p>
+    <p>If it is determined though clinical assessment after a period of sobriety that a client is suffering from both a substance use disorder, as well as a mental health disorder, both conditions will be treated concurrently by Flatirons Recovery Center’s skilled therapeutic and medical teams.</p>
+</div>
+<div class="green">
+    <div class="wrap">
+        <div class="row center-xs">
+            <h2>Get In Touch With A Professional</h2>
+        </div>
+        <div class="row center-xs">
+            <div class="col-xs">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
+                <a class="button border" href="#">Call Now</a>
+            </div>
+        </div>
+    </div>
+</div>
+    <h3>Major Depressive Disorder</h3>
+    <p>Major Depressive Disorder is one of the most common mental health disorders in the United States. According to the National Institute for Mental Health, among U.S. adults aged 18 or older in 2017, an estimated 17.3 million adults in the United States reported at least one major depressive episode. This number represented 7.1% of all U.S. adults. Further, the prevalence of major depressive episode was higher among adult females (8.7%) compared to males (5.3%), and the prevalence of adults with a major depressive episode was highest among individuals aged 18-25 (13.1%).</p>
+    <p>Typical symptoms of depression include depressed mood for most of the day, nearly every day; diminished pleasure in activities; significant weight loss; difficulty sleeping or sleeping too much; fatigue and/or loss of energy nearly every day; feelings of worthlessness; and recurrent thoughts of death.</p>
 
-Dual-Diagnosis Treatment
+    <h3>Anxiety Disorder</h3>
+    <p>Anxiety disorders are the most common mental health concern in the United States. It has been estimated by various studies that over 40 million adults in the U.S. have an anxiety disorder. Common anxiety disorders include Generalized Anxiety Disorder, Panic Disorder, and Social Anxiety Disorder.</p>
+    <p>Typical symptoms of anxiety disorders include difficulty controlling worry; restlessness, feeling keyed up, or on edge; being easily fatigued; difficulty concentrating; elevated irritability; muscle tension; and sleep disturbance.</p>
 
--General Overview:
-Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder. These are also referred to as co-occurring disorders.
+    <h3>Bi-polar Disorder</h3>
+    <p>While not as common as Depressive or Anxiety Disorders, Bipolar Disorder causes dramatic shifts in a person’s mood, energy and ability to think clearly. People with bipolar disorder experiences periods of mania and depression—which differ drastically from the typical ups-and-downs most people experience.</p>
+    <p>The National Institute for Mental Health estimates that 2.8% of U.S. adults had bipolar disorder in the past year, and that an estimated 4.4% of U.S. adults experience bipolar disorder at some time in their lives.</p>
+    <p>The National Alliance on Mental Illness believes “that the average age-of-onset is about 25, but it can occur in the teens, or more uncommonly, in childhood. The condition affects men and women equally, and that nearly 83% of cases classified as severe.”</p>
+    <p>Typical symptoms of mania include periods of sleeplessness that can last for many days; inflated self-esteem or grandiose thinking; impulsive behaviors such as lavish spending or risky sexual encounters; and racing thoughts.</p>
+    <p>Typical symptoms of depression include depressed mood for most of the day, nearly every day; diminished pleasure in activities; significant weight loss; difficulty sleeping or sleeping too much; fatigue and/or loss of energy nearly every day; feelings of worthlessness; and recurrent thoughts of death.</p>
 
-According to the National Alliance on Mental Illness (NAMI), approximately  19.3% of U.S. adults with mental illness also experienced a substance use disorder in 2018, equating to 9.2 million individuals.
-
-Often when people are using substances, the symptoms that they exhibit mimic those of mental health disorders. For example, a person using cocaine or methamphetamine excessively may begin to hallucinate, or to behave in ways that are very similar to someone experiencing a manic episode (not sleeping, grandiose or impulsive behavior).
-
-For this reason, it is important for anyone engaging in treatment at Flatirons Recovery Center to achieve a period sobriety, in order to more accurately determine and assess the nature of any mental health symptoms they may be experiencing.
-
-If it is determined though clinical assessment after a period of sobriety that a client is suffering from both a substance use disorder, as well as a mental health disorder, both conditions will be treated concurrently by Flatirons Recovery Center’s skilled therapeutic and medical teams.
-
-	-Major Depressive Disorder
-Major Depressive Disorder is one of the most common mental health disorders in the United States. According to the National Institute for Mental Health, among U.S. adults aged 18 or older in 2017, an estimated 17.3 million adults in the United States reported at least one major depressive episode. This number represented 7.1% of all U.S. adults. Further, the prevalence of major depressive episode was higher among adult females (8.7%) compared to males (5.3%), and the prevalence of adults with a major depressive episode was highest among individuals aged 18-25 (13.1%).
-
-Typical symptoms of depression include depressed mood for most of the day, nearly every day; diminished pleasure in activities; significant weight loss; difficulty sleeping or sleeping too much; fatigue and/or loss of energy nearly every day; feelings of worthlessness; and recurrent thoughts of death.
-
-	-Anxiety Disorder
-Anxiety disorders are the most common mental health concern in the United States. It has been estimated by various studies that over 40 million adults in the U.S. have an anxiety disorder. Common anxiety disorders include Generalized Anxiety Disorder, Panic Disorder, and Social Anxiety Disorder.
-Typical symptoms of anxiety disorders include difficulty controlling worry; restlessness, feeling keyed up, or on edge; being easily fatigued; difficulty concentrating; elevated irritability; muscle tension; and sleep disturbance.
-
-	-Bi-polar Disorder
-While not as common as Depressive or Anxiety Disorders, Bipolar Disorder causes dramatic shifts in a person’s mood, energy and ability to think clearly. People with bipolar disorder experiences periods of mania and depression—which differ drastically from the typical ups-and-downs most people experience.
-The National Institute for Mental Health estimates that 2.8% of U.S. adults had bipolar disorder in the past year, and that an estimated 4.4% of U.S. adults experience bipolar disorder at some time in their lives
-The National Alliance on Mental Illness believes “that the average age-of-onset is about 25, but it can occur in the teens, or more uncommonly, in childhood. The condition affects men and women equally, and that nearly 83% of cases classified as severe.”
-
-Typical symptoms of mania include periods of sleeplessness that can last for many days; inflated self-esteem or grandiose thinking; impulsive behaviors such as lavish spending or risky sexual encounters; and racing thoughts.
-
-Typical symptoms of depression include depressed mood for most of the day, nearly every day; diminished pleasure in activities; significant weight loss; difficulty sleeping or sleeping too much; fatigue and/or loss of energy nearly every day; feelings of worthlessness; and recurrent thoughts of death.
-
-	-Post-traumatic Stress Disorder
-Post-traumatic stress disorder (PTSD) may develop after a person has been exposed to an event that is more significant than a typical stressor. These may include, but are not limited to, violent personal assaults, natural or human-caused disasters, accidents, combat, and other forms of physical, emotional, and/or relational violence.
-
-The National Institute of Mental Health (NIMH) estimates that approximately one half of all U.S. adults will experience at least one traumatic event in their lives, though most will not develop PTSD. NIMH also reports that 3.6% of U.S. adults met diagnostic criteria for PTSD in the past year, and that the prevalence of PTSD among adults was higher for females (5.2%) than for males (1.8%).
-
-Typical symptoms of PTSD include persistent, frightening thoughts and memories of the event(s); frequent sleep difficulty; feeling detached or numb; being easily startled by loud noises or unexpected encounters. In severe forms, PTSD significantly impairs a person's ability to function at work and at home, both socially and relationally.
-
-
-Intensive Outpatient Program
-
--General Overview
-
-Partial Hospitalization Program
-
--General Overview
-
-Flatirons Recovery Sober Living
-
--General Overview
-
--Benefits
-
-	-Daily Rundown
-
-Addictions Treated
-
--General Overview
-
-	-Alcohol
-		-How it’s treated
-
-		-What to look for in a loved one’s alcohol use
-
-	-Heroin
-		-How it’s treated
-
-		-What to look for in a loved one’s alcohol use
-
-	-Cocaine
--How it’s treated
-
-		-What to look for in a loved one’s alcohol use
-
-	-Methamphetamine
-
-		-How it’s treated
-
-		-What to look for in a loved one’s alcohol use
-
-
-Treatment Length
-
--General Overview
-
-What to expect from 30/60/90 days of treatment
-
-What are the benefits of longer term treatment?
+    <h3>Post-traumatic Stress Disorder</h3>
+    <p>Post-traumatic stress disorder (PTSD) may develop after a person has been exposed to an event that is more significant than a typical stressor. These may include, but are not limited to, violent personal assaults, natural or human-caused disasters, accidents, combat, and other forms of physical, emotional, and/or relational violence.</p>
+    <p>The National Institute of Mental Health (NIMH) estimates that approximately one half of all U.S. adults will experience at least one traumatic event in their lives, though most will not develop PTSD. NIMH also reports that 3.6% of U.S. adults met diagnostic criteria for PTSD in the past year, and that the prevalence of PTSD among adults was higher for females (5.2%) than for males (1.8%).</p>
+    <p>Typical symptoms of PTSD include persistent, frightening thoughts and memories of the event(s); frequent sleep difficulty; feeling detached or numb; being easily startled by loud noises or unexpected encounters. In severe forms, PTSD significantly impairs a person's ability to function at work and at home, both socially and relationally.</p>
+</div>
