--- a/src/therapy/index.v.html
+++ b/src/therapy/index.v.html
@@ -1,4 +1,10 @@
-<div class="main yellow">
+<style>
+    .nav-bar, .nav-bar > ul, .nav-icon > div, .nav-list-main, .nav-list-sub {
+        background: rgb(var(--orange));
+    }
+</style>
+
+<div class="main orange">
     <div class="wrap">
         <div class="row center-xs">
             <div class="col-xs">
