--- a/src/index.v.html
+++ b/src/index.v.html
@@ -15,11 +15,13 @@
 
 <div class="wrap">
     <div class="row center-xs">
+        <object data="/assets/mtns.svg" type="image/svg+xml">flatirons vector</object>
+
         <div class="col-xs-12">
             <h2>Our Mission</h2>
         </div>
         <div class="col-xs-12">
-            <p style="font-family: sans-serif;">
+            <p>
                 The mission of Flatirons Recovery Center is to provide client-centered, evidence-based
                 substance use/dual-diagnosis care that takes a holistic approach to treatment. What
                 differentiates Flatirons Recovery Center from other treatment providers is our commitment to
