--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -32,55 +32,57 @@
     </main>
 
     <footer>
-    	<div class="row middle-xs center-xs">
-			<div class="col-xs-12 col-sm-4">
-				<h3>Follow</h3>
-                <br>
-				<a class="badge" href="#f" target="_blank" rel="noopener">
-					<object data="/assets/f.svg" type="image/svg+xml">Facebook Logo</object>
-				</a>
-			</div>
-			<div class="col-xs-12 col-sm-4">
-				<h3>Find</h3>
-                <br>
-				<a href="#m" target="_blank" rel="noopener" data-track="click: address, click">Street Address <br><br> City, State Zip</a>
-			</div>
-			<div class="col-xs-12 col-sm-4">
-				<h3>Contact</h3>
-                <br>
-				<a href="tel:" data-track="click: phone, click">Phone Number</a>
-				<br>
-				<br>
-				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
-			</div>
-		</div>
-		<div class="row center-xs">
-			<div class="col-xs-12">
-                <a class="button white" href="./contact">Contact</a>
-			</div>
-		</div>
-		<div class="row center-xs">
-            <div class="col-xs-12 col-sm-3">
+        <div class="wrap">
+        	<div class="row middle-xs center-xs">
+    			<div class="col-xs-12 col-sm-4">
+    				<h3>Follow</h3>
+                    <br>
+    				<a class="badge" href="#f" target="_blank" rel="noopener">
+    					<object data="/assets/f.svg" type="image/svg+xml">Facebook Logo</object>
+    				</a>
+    			</div>
+    			<div class="col-xs-12 col-sm-4">
+    				<h3>Find</h3>
+                    <br>
+    				<a href="#m" target="_blank" rel="noopener" data-track="click: address, click">Street Address <br><br> City, State Zip</a>
+    			</div>
+    			<div class="col-xs-12 col-sm-4">
+    				<h3>Contact</h3>
+                    <br>
+    				<a href="tel:" data-track="click: phone, click">Phone Number</a>
+    				<br>
+    				<br>
+    				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
+    			</div>
+    		</div>
+    		<div class="row center-xs">
+    			<div class="col-xs-12">
+                    <a class="button white" href="./contact">Contact</a>
+    			</div>
+    		</div>
+    		<div class="row center-xs">
+                <div class="col-xs-12 col-sm-3">
+                </div>
+                <div class="col-xs-12 col-sm-3">
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <a href="#l" target="_blank" rel="noopener">
+                        <img src="" alt="LegitScript">
+                    </a>
+                </div>
+    		</div>
+    		<hr>
+            <div class="row center-xs middle-xs">
+    			<div class="col-xs-4">
+    				<a href="/">&copy; Flatirons Recovery</a>
+    			</div>
+    			<div class="col-xs-4">
+                    <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
+    			</div>
+    			<div class="col-xs-4">
+    				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
+    			</div>
             </div>
-            <div class="col-xs-12 col-sm-3">
-            </div>
-            <div class="col-xs-12 col-sm-4">
-                <a href="#l" target="_blank" rel="noopener">
-                    <img src="" alt="LegitScript">
-                </a>
-            </div>
-		</div>
-		<hr>
-        <div class="row center-xs middle-xs">
-			<div class="col-xs-4">
-				<a href="/">&copy; Flatirons Recovery</a>
-			</div>
-			<div class="col-xs-4">
-                <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
-			</div>
-			<div class="col-xs-4">
-				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
-			</div>
         </div>
 
     </footer>
