--- a/src/about/index.v.html
+++ b/src/about/index.v.html
@@ -10,12 +10,81 @@
 </div>
 
 <div class="wrap">
-    <div class="row">
-        <div class="col-xs">
-            <h2>Mission</h2>
-            <p>The mission of Flatirons Recovery Center is to provide client-centered, evidence-based substance use/dual-diagnosis care that takes a holistic approach to treatment. What differentiates Flatirons Recovery Center from other treatment providers is our commitment to small group sizes, treating clients as whole beings, and the continued development of a compassionate community in which to heal. Our highly skilled, kind, and compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and mental health disorders.</p>
+    <div class="row center-xs">
+        <object data="/assets/mtns.svg" type="image/svg+xml">flatirons vector</object>
 
-            <p>Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober living residence for clients to live in a supportive, structured, healthy environment while taking part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their time with Flatirons Recovery Center, clients can expect to be introduced to new many new skills to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention Skills, and introduction to community based recovery programs such as SMART Recovery and 12 Step/AA.</p>
+        <div class="col-xs-12">
+            <h2>Our Mission</h2>
+        </div>
+        <div class="col-xs-12">
+            <p>
+                The mission of Flatirons Recovery Center is to provide client-centered, evidence-based
+                substance use/dual-diagnosis care that takes a holistic approach to treatment. What
+                differentiates Flatirons Recovery Center from other treatment providers is our commitment to
+                small group sizes, treating clients as whole beings, and the continued development of a
+                compassionate community in which to heal. Our highly skilled, kind, and compassionate clinical
+                staff provide outstanding care that meets clients as they are, in order to guide them through
+                the process of healing from a wide range of substance use, and mental health disorders.
+            </p>
+
+        </div>
+        <div class="col-xs-12">
+            <p>
+                Flatirons Recovery Center provides clients the opportunity to begin their healing process from
+                substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober
+                living residence for clients to live in a supportive, structured, healthy environment while taking
+                part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their
+                time with Flatirons Recovery Center, clients can expect to be introduced to new many new skills
+                to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery
+                Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention
+                Skills, and introduction to community based recovery programs such as SMART Recovery and
+                12 Step/AA.
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="orange">
+    <div class="wrap">
+        <div class="row">
+            <div class="col-xs">
+                <h2>Our Team</h2>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
         </div>
     </div>
 </div>
