--- a/src/index.v.html
+++ b/src/index.v.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-xs-12">
                 <a class="button blue" href="#">Call Us</a>
-                <a class="button blue" href="#">About Us</a>
+                <a class="button blue" href="/about">Learn More</a>
             </div>
         </div>
     </div>
