--- a/src/mental-health/index.v.html
+++ b/src/mental-health/index.v.html
@@ -1,6 +1,11 @@
 <style>
     .nav-bar, .nav-bar > ul, .nav-icon > div, .nav-list-main, .nav-list-sub {
         background: rgb(var(--yellow));
+        color: rgb(var(--black));
+    }
+
+    .main h1, .main h3 {
+        color: rgb(var(--black));
     }
 </style>
 
@@ -38,6 +43,8 @@
         </div>
     </div>
 </div>
+<div class="wrap">
+
     <h3>Major Depressive Disorder</h3>
     <p>Major Depressive Disorder is one of the most common mental health disorders in the United States. According to the National Institute for Mental Health, among U.S. adults aged 18 or older in 2017, an estimated 17.3 million adults in the United States reported at least one major depressive episode. This number represented 7.1% of all U.S. adults. Further, the prevalence of major depressive episode was higher among adult females (8.7%) compared to males (5.3%), and the prevalence of adults with a major depressive episode was highest among individuals aged 18-25 (13.1%).</p>
     <p>Typical symptoms of depression include depressed mood for most of the day, nearly every day; diminished pleasure in activities; significant weight loss; difficulty sleeping or sleeping too much; fatigue and/or loss of energy nearly every day; feelings of worthlessness; and recurrent thoughts of death.</p>
