addmisions process content

--- a/src/admissions/index.v.html
+++ b/src/admissions/index.v.html
@@ -1,13 +1,13 @@
 
-<style>
-</style>
-
 <div class="main green">
     <div class="wrap">
         <div class="row center-xs">
             <div class="col-xs">
                 <h1>ADMISSIONS</h1>
                 <h3>learn more about our addiction treatment center</h3>
+
+                <a class="button border" href="#">Call NOW</a>
+
             </div>
         </div>
     </div>
@@ -29,4 +29,24 @@
 
         </div>
     </div>
+</div>
+
+<div class="blue">
+    <div class="wrap">
+        <div class="row center-xs">
+            <h1>FAQ's</h1>
+        </div>
+        <div class="row center-xs">
+            <div class="col-xs">
+                <h4>Consider reading our frequentyl asked questions. Learn more about Flatirons Recovery Center.</h4>
+
+                <a class="button border" href="/about#faq">More About Us</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="wrap">
+
+    <!-- { "partial": "/assets/partials/verify-insurance.p.html" } -->
 </div>
