--- a/src/index.v.html
+++ b/src/index.v.html
@@ -6,8 +6,7 @@
                 <h1>Flatirons Recovery</h1>
             </div>
             <div class="col-xs-12">
-                <a class="button blue" href="#">Call Now</a>
-                <a class="button blue" href="/about">Get Started</a>
+                <a class="button border" href="#">Call Now</a>
             </div>
         </div>
     </div>
