home page updates

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -14,7 +14,7 @@
 
 <div class="wrap">
     <div class="row center-xs">
-        <object data="/assets/mtns.svg" type="image/svg+xml">flatirons vector</object>
+        <!-- <object data="/assets/mtns.svg" type="image/svg+xml">flatirons vector</object> -->
 
         <div class="col-xs-12">
             <h2>Our Mission</h2>
