--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -14,17 +14,30 @@
 </head>
 <body>
 
-    <header>
-		<nav class="nav-bar">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/admissions">Admissions</a></li>
-                <li><a href="/therapy">Therapy</a></li>
-                <li><a href="/mental-health">Mental Health</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-        </nav>
+    <header class="row middle-xs center-xs">
+        <div class="col-xs-6 col-md-2 start-xs">
+            <object class="logo" data="/assets/logo.svg" type="image/svg+xml">flatirons recovery logo</object>
+        </div>
+        <div class="col-xs-12 col-md-8 left-xs last-xs">
+    		<nav class="nav-bar">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li>
+                        <a>More</a>
+                        <ul>
+                            <li><a href="/admissions">Admissions</a></li>
+                            <li><a href="/therapy">Therapy</a></li>
+                            <li><a href="/mental-health">Mental Health</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col-xs-6 col-md-2 end-xs last-md">
+            <a class="phone" href="tel:000-000-0000">000-000-0000</a>
+        </div>
     </header>
 
     <main>
