added icon logo, logo optimization

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -3,6 +3,9 @@
     <div class="gradient">
         <div class="row center-xs">
             <div class="col-xs-12">
+                <object class="logo-icon" data="/assets/logo-icon.svg" type="image/svg+xml">flatirons recovery logo icon</object>
+            </div>
+            <div class="col-xs-12">
                 <h1>Flatirons Recovery</h1>
             </div>
             <div class="col-xs-12">
@@ -14,8 +17,6 @@
 
 <div class="wrap">
     <div class="row center-xs">
-        <!-- <object data="/assets/mtns.svg" type="image/svg+xml">flatirons vector</object> -->
-
         <div class="col-xs-12">
             <h2>Our Mission</h2>
         </div>
