--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -16,7 +16,7 @@
 
     <header class="row middle-xs center-xs">
         <div class="col-xs-6 col-md-2 start-xs">
-            <object class="logo" data="/assets/logo.svg" type="image/svg+xml">flatirons recovery logo</object>
+            <object class="logo-full" data="/assets/logo-full.svg" type="image/svg+xml">flatirons recovery logo full</object>
         </div>
         <div class="col-xs-12 col-md-8 left-xs last-xs">
     		<nav class="nav-bar">
