--- a/src/therapy/index.v.html
+++ b/src/therapy/index.v.html
@@ -52,19 +52,29 @@
             <p>Dialectical Behavioral Therapy (DBT) is a type of evidence-based behavioral therapy. DBT is used to treat crisis/ suicide/ addiction and other self-destructive behaviors. It teaches clients the skills to cope with, and change, unhealthy habitual behaviors and thought processes by developing skills in Emotion Regulation, Distress Tolerance, Interpersonal Effectiveness, and Mindfulness.</p>
 
             <h3>Cognitive Behavioral Therapy (CBT)</h3>
+            <p>CBT (Cognitive-Behavioral Therapy) is the most readily recognizable form of psychotherapy, and the kind that most people probably think about when they imagine “going to therapy.” It addresses people’s thought patterns, feelings, and subsequent behaviors, offering new perspectives on people’s experiences and training them to confront problems in a healthy way. CBT is an umbrella term; there are a vast array of “sub-categories” of CBT, all of which are designed to address the problems that can arise when thoughts, feelings, and behaviors become inextricably linked.</p>
+            <p>Some of these modalities of CBT include:</p>
+            <ul>
+                <li><strong>ACT (Acceptance and Commitment Therapy)</strong>
+                    ACT is based on the premise that distressing thoughts and feelings can be successfully managed by developing the ability to observe them with an attitude of non-judgment and acceptance. While it may seem counterintuitive, leaning into negative thoughts can often have the effect of making those thoughts less painful or “sticky.” ACT dictates that when people are no longer trapped in the the quicksand of their negative thought patterns, they are freer to identify the people, places, and ideas that are valuable to them. Those values can then act as a life compass, providing guidance and direction when the going gets tough.
+                </li>
+                <li>
+                    <strong>DBT (Dialectical Behavioral Therapy)</strong>
+                    The theory behind DBT is that some people react in a more intense manner toward certain emotional situations, primarily those found in their close relationships. This heightened emotional reactivity causes people to see the world in black-and-white terms and can lead to recurring episodes of crisis or self-destructive behavior, which can significantly impact their day-to-day functioning. Learning DBT skills - which focus on mindfulness, healthy communication, emotion regulation, and distress tolerance - can reduce the intensity and impact of difficult emotions, such as anger, hurt, betrayal, jealousy, and hopelessness. DBT has also been shown to alleviate recurring thoughts of suicide or self-harm.
+                </li>
+            </ul>
 
             <h3>Experiential Therapy</h3>
+            <p>Experiential Therapy is also an umbrella term used to describe various therapies that allow people to heal in the context of an activity or experience, rather than relying on traditional means of verbal communication. In general, the emphasis in these therapies is placed on the process of engaging in the activity, rather than any particular product that may be created during the course of the sessions. Under the guidance of a trained experiential therapist, people can begin to release and explore negative feelings, such as anger, hurt, or shame; develop self-confidence and feel increased self-esteem; cultivate curiosity and enthusiasm; challenge fears; and discover new forms of self-expression. Examples of experiential therapies include: expressive arts, music, wilderness, psychodrama, and equine therapies.</p>
 
             <h3>EMDR – Eye Movement Desensitization and Reprocessing</h3>
+            <p>EMDR (Eye Movement Desensitization and Reprocessing) is a highly effective treatment for clients who have experienced trauma. While it was long believed that trauma could take years to work through, EMDR has shown to significantly reduce intrusive symptoms in as few as three sessions. In such a session, a person would be asked to recall distressing images; the therapist would then direct the person in some type of bilateral stimulation, such as rapid, side-to-side eye movements. While there are several theories positing the specific mechanisms for its effectiveness, EMDR can provide rapid relief for people suffering from PTSD, depression, anxiety, and other debilitating conditions.</p>
 
             <h3>Motivational Interviewing (MI)</h3>
-
-            <h3>Acceptance and Commitment Therapy</h3>
+            <p>Motivational interviewing is a counseling method that helps people resolve ambivalent feelings and insecurities to find the internal motivation they need to change their behavior. It is a practical, empathetic, and short-term process that takes into consideration how difficult can be to form new habits and create lasting change in one’s life. Research has shown that MI works particularly well with people who initially feel unmotivated or unprepared for change.</p>
 
             <h3>Biofeedback</h3>
-
-            <h3>Family Therapy</h3>
-
+            <p>Biofeedback is a safe, non-invasive technology used to treat people with a variety of physical and mental health conditions (including anxiety, chronic pain, ADHD, performance anxiety, among others). Sensors that measure various biometrics - such as heart rate, respirations, and sweat gland activity - are employed in conjunction with software that provides visual representation of a person’s physiological state. This not only allows people to “see” what’s happening in their bodies when they feel distressed, but also train themselves to consciously change their experience. Biofeedback generally requires a relatively brief period of training, making it an especially useful tool in shorter-term treatment settings.</p>
 
         </div>
     </div>
