home page sections

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -9,14 +9,14 @@
                 <h1>Flatirons Recovery</h1>
             </div>
             <div class="col-xs-12">
-                <a class="button border" href="#">Call Now</a>
+                <a class="button blue" href="#">Call Now</a>
             </div>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col-xs">
+    <div class="col-xs-12 col-sm">
         <div class="wrap">
             <div class="row">
                 <div class="col-xs-12">
@@ -35,8 +35,40 @@
             </div>
         </div>
     </div>
-    <div class="col-xs half-bg"></div>
+    <div class="col-xs-12 col-sm half-bg" style="background-image: url('/assets/images/wooden-fence.jpg');"></div>
 </div>
+
+<!-- <div class="orange"> -->
+    <div class="wrap">
+        <div class="row">
+            <div class="col-xs">
+                <h2>Our Team</h2>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <img src="https://via.placeholder.com/600x900" alt="">
+                <h4>Name, Title</h4>
+            </div>
+        </div>
+        <div class="row center-xs">
+            <a class="button blue" href="/about#team">Meet Our Team</a>
+        </div>
+    </div>
+<!-- </div> -->
 
 <div class="blue">
     <div class="wrap">
@@ -45,8 +77,8 @@
         </div>
         <div class="row center-xs">
             <div class="col-xs">
-                <h3>If you would like to reach out Flatirons Recovery Center<br />
-                    call us at 555-555-5555</h3>
+                <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center<br />
+                    call us at 555-555-5555</h4>
 
                 <a class="button border" href="/contact">Contact Us</a>
             </div>
@@ -54,61 +86,64 @@
     </div>
 </div>
 
-<div class="wrap">
-    <div class="row">
-        <div class="col-xs">
-            <h2>Mental Health</h2>
-            <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder. These are also referred to as co-occurring disorders.</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs">
-            <h3>ANXIETY DISORDER</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-
-        <div class="col-xs">
-            <h3>BI-POLAR DISORDER</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-
-        <div class="col-xs">
-            <h3>POST-TRAUMATIC STRESS DISORDER</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-    </div>
-    <div class="row center-xs">
-        <a class="button border" href="/mental-health">Mental Health</a>
-    </div>
-</div>
-
 <div class="row">
-    <div class="col-xs">
+    <div class="col-xs-12 col-sm half-bg" style="background-image: url('/assets/images/mountain-river.jpg'); background-position: center;"></div>
+    <div class="col-xs-12 col-sm">
         <div class="wrap">
             <div class="row">
                 <div class="col-xs-12">
-                    <h2>Treatment</h2>
+                    <h2>Therapy</h2>
                     <hr>
                 </div>
                 <div class="col-xs-12">
-                    <h3>Our Mission</h3>
-                    <p>The mission of Flatirons Recovery Center is to provide client-centered, evidence-based substance use/dual-diagnosis care that takes a holistic approach to treatment.</p>
-                    <h3>Why Us?</h3>
-                    <p>What differentiates Flatirons Recovery Center from other treatment providers is our commitment to small group sizes, treating clients as whole beings, and the continued development of a compassionate community in which to heal. Our highly skilled, kind, and compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
+                    <h3>Individual</h3>
+                    <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the painful habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin shifting those.</p>
+                    <h3>Group</h3>
+                    <p>Along side individual therapy, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
+                    <h3>Family</h3>
+                    <p>At Flatirons Recovery Center, client will engage in a bi-weekly, 1-hour family therapy session, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p>
                 </div>
             </div>
             <div class="row center-xs">
-                <a class="button border" href="/about">Learn More</a>
+                <a class="button border" href="/therapy">Learn More - Therapy</a>
             </div>
         </div>
     </div>
-    <div class="col-xs half-bg"></div>
+</div>
+
+<div class="green">
+    <div class="wrap">
+        <div class="row center-xs">
+            <div class="col-xs">
+                <h2>Mental Health</h2>
+                <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder such as, <strong>anxitey</strong> disorder, <strong>bi-polar</strong> disorder, and <strong>post traumatic stress</strong> disorder. These are also referred to as co-occurring disorders.</p>
+                <a class="button border" href="/mental-health">Learn More - Mental Health</a>
+            </div>
+        </div>
+        <!-- <div class="row">
+            <div class="col-xs">
+                <h3>ANXIETY DISORDER</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </div>
+
+            <div class="col-xs">
+                <h3>BI-POLAR DISORDER</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </div>
+
+            <div class="col-xs">
+                <h3>POST-TRAUMATIC STRESS DISORDER</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+        </div> -->
+    </div>
 </div>
 
 <div class="wrap">
     <form class="row">
         <div class="col-xs-12">
-            <h3>send us a message</h3>
+            <h2>Contact Us</h2>
+            <p>Send us a confidential message, and one of our admissions professionals will follow up with you.</p>
         </div>
         <div class="col-xs-12 col-sm-6">
             <label>first name</label>
@@ -143,7 +178,7 @@
             <textarea name="message" required></textarea>
         </div>
         <div class="col-xs-12">
-            <button class="button orange" type="submit">Submit</button>
+            <button class="button blue" type="submit">Submit</button>
         </div>
     </form>
 </div>
