--- a/src/about/index.v.html
+++ b/src/about/index.v.html
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-<div class="orange">
+<div class="orange" id="team">
     <div class="wrap">
         <div class="row">
             <div class="col-xs">
