mountains on about

--- a/src/about/index.v.html
+++ b/src/about/index.v.html
@@ -12,7 +12,13 @@
 
 <div class="wrap">
     <div class="row center-xs">
+        <div class="col-xs-8 col-sm-4 col-md-3">
+            <object data="/assets/logo-icon.svg" type="image/svg+xml">flatirons recovery logo icon</object>
+        </div>
+    </div>
+    <div class="row center-xs">
         <div class="col-xs-12">
+
             <h2>Our Mission</h2>
         </div>
         <div class="col-xs-12">
